* [#152] Added minimum width on access panels to fix layout problem on small screens

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1009,10 +1009,10 @@ body > .container{
     margin-top:20px;
 }
 
-
 #permission-panel .custom-well{
     height: 235px;
     background: #F7F7F7;
+    min-width:339px;
 }
 
 #permission-panel h5{
